[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiusd_otp"
version = "0.1.0"
authors = [{name = "Timo Mäkinen", email = "tmakinen@foo.sh"}, ]
description = "Simple WSGI app to provide OTP passwords to RADIUS"
license = {text = "MIT"}
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
    "flask",
    "gunicorn",
    "valkey",
]

[tool.setuptools]
py-modules = ["radiusd_otp"]
